--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body p {
 }
 
 .container {
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,26 +28,31 @@ body p {
     border-radius: 15px;
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
     margin: 0 auto;
-    padding: 20px 30px;
+    padding: 20px;
     text-align: center;
+    height: auto;
+    width: 325px;
 }
 
 
-.container img {
+.content img {
     border-radius: 15px;
     margin-bottom: 25px;
+    width: 100%;
+    height: auto;
 }
 
-.container h2 {
+.content h2 {
     font-weight: 700;
     color: hsl(218, 44%, 22%);
-    margin-bottom: 25px;
+    margin: 0px 5px 20px 5px;
 }
 
 
-.container p {
+.content p {
     color: hsl(220, 15%, 55%);
     font-weight: 400;
+    padding: 0px 20px;
 }
 
 
@@ -56,8 +62,29 @@ body p {
     width: 100%;
     text-align: center;
     font-size: 11px;
+    margin-bottom: 20px;
 }
 
 .attribution a {
     color: hsl(228, 45%, 44%);
+    text-decoration: none;
+}
+
+@media (max-width: 375px) {
+    .content {
+        width: 275px;
+    }
+
+    .content h2 {
+        font-size: 19px;
+    }
+
+    .content p {
+        font-size: 13px;
+        padding: 0px 10px;
+    }
+
+    .attribution p {
+        font-size: 13px;
+    }
 }
