--- a/style.css
+++ b/style.css
@@ -26,9 +26,9 @@ body p {
 .content {
     background: hsl(0, 0%, 100%);
     border-radius: 15px;
-    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    box-shadow: rgba(17, 12, 46, 0.10) 0px 48px 100px 0px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 15px;
     text-align: center;
     height: auto;
     width: 325px;
@@ -37,7 +37,7 @@ body p {
 
 .content img {
     border-radius: 15px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     width: 100%;
     height: auto;
 }
@@ -46,6 +46,7 @@ body p {
     font-weight: 700;
     color: hsl(218, 44%, 22%);
     margin: 0px 5px 20px 5px;
+    font-size: 22px;
 }
 
 
@@ -53,6 +54,7 @@ body p {
     color: hsl(220, 15%, 55%);
     font-weight: 400;
     padding: 0px 20px;
+    margin-bottom: 25px;
 }
 
 
@@ -67,7 +69,6 @@ body p {
 
 .attribution a {
     color: hsl(228, 45%, 44%);
-    text-decoration: none;
 }
 
 @media (max-width: 375px) {
