--- a/style.css
+++ b/style.css
@@ -11,10 +11,6 @@ body {
     font-family: 'Outfit', sans-serif;
 }
 
-body p {
-    font-size: 15px;
-}
-
 .container {
     height: 100vh;
     display: flex;
@@ -28,10 +24,10 @@ body p {
     border-radius: 15px;
     box-shadow: rgba(17, 12, 46, 0.10) 0px 48px 100px 0px;
     margin: 0 auto;
-    padding: 15px;
+    padding: 10px;
     text-align: center;
     height: auto;
-    width: 325px;
+    max-width: 320px;
 }
 
 
@@ -42,19 +38,20 @@ body p {
     height: auto;
 }
 
-.content h2 {
+.content h1 {
     font-weight: 700;
     color: hsl(218, 44%, 22%);
-    margin: 0px 5px 20px 5px;
-    font-size: 22px;
+    margin: 0px 5px 10px 5px;
+    font-size: 1.5rem;
 }
 
 
 .content p {
     color: hsl(220, 15%, 55%);
     font-weight: 400;
-    padding: 0px 20px;
-    margin-bottom: 25px;
+    padding: 0px 15px;
+    margin-bottom: 20px;
+    font-size: 1rem;
 }
 
 
@@ -63,7 +60,7 @@ body p {
     bottom: 0;
     width: 100%;
     text-align: center;
-    font-size: 11px;
+    font-size: 1rem;
     margin-bottom: 20px;
 }
 
@@ -71,21 +68,21 @@ body p {
     color: hsl(228, 45%, 44%);
 }
 
-@media (max-width: 375px) {
+/* @media (max-width: 375px) {
     .content {
         width: 275px;
     }
 
-    .content h2 {
-        font-size: 19px;
+    .content h1 {
+        font-size: 1.2rem;
     }
 
     .content p {
-        font-size: 13px;
+        font-size: 0.8rem;
         padding: 0px 10px;
     }
 
     .attribution p {
-        font-size: 13px;
+        font-size: 0.8rem;
     }
-}
+} */
